Alignment fix for collapse button and other minor tweaks

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -79,10 +79,10 @@ $list-node-children-item-width: 160px
 
 #project_nav-footer
 	height: $project_footer-height
-	width: $project_nav-width
+	width: 30px
 
 	position: absolute
-	left: 0
+	left: $project_nav-width - 30px
 	bottom: 0
 
 	+media-lg
@@ -405,10 +405,10 @@ $list-node-children-item-width: 160px
 
 .project_nav-collapse-btn
 	height: $project_footer-height
-	width: 100%
+	width: 30px
 	position: absolute
 	bottom: 0
-	left: 0
+	right: 0
 	padding: 3px 5px 3px 0
 	text-align: right
 
